--- a/index.html
+++ b/index.html
@@ -1,47 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tixino</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        main {
-            padding: 20px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <meta http-equiv="refresh" content="0;URL='intent:#Intent;action=com.example.profile.splash_screen;end'">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to my app</h1>
-    </header>
-
-    <main>
-        <p>This is the homepage of my app</p>
-    </main>
-
-    <footer>
-        <p>© 2024 Tixino</p>
-    </footer>
+    <!-- Optional: You can add a message to display while redirecting -->
+    <p>Redirecting to app...</p>
 </body>
 </html>
